--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
-  "dependencies": {},
+  "dependencies": {
+    "basiclightbox": "^5.0.4"
+  },
   "parcelCleanPaths": [
     "dist",
     ".cache"
