--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "parcel-project-template",
+  "name": "Team-project-Sparks-of-Sharks",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Jaguar838.github.io/parcel",
+  "homepage": "https://Jaguar838.github.io/Team-project-Sparks-of-Sharks",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /parcel/"
+    "build": "parcel build src/*.html --public-url /Team-project-Sparks-of-Sharks/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Jaguar838/parcel.git"
+    "url": "git+https://github.com/Jaguar838/Team-project-Sparks-of-Sharks.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Jaguar838/parcel/issues"
+    "url": "https://github.com/Jaguar838/Team-project-Sparks-of-Sharks/issues"
   },
   "devDependencies": {
     "axios": "^0.21.1",
