--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Team-project-Sparks-of-Sharks",
+  "name": "team",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
