--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "url": "git+https://github.com/Jaguar838/Team-project-Sparks-of-Sharks.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "---------------------",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Jaguar838/Team-project-Sparks-of-Sharks/issues"
   },
   "devDependencies": {
+    "@pnotify/core": "^5.2.0",
     "axios": "^0.21.1",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.5",
@@ -29,7 +30,8 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "basiclightbox": "^5.0.4"
+    "basiclightbox": "^5.0.4",
+    "lodash.debounce": "^4.0.8"
   },
   "parcelCleanPaths": [
     "dist",
