--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "homepage": "https://Jaguar838.github.io/Team-project-Sparks-of-Sharks",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Team-project-Sparks-of-Sharks/"
+    "build": "parcel build src/*.html --public-url /Team-project-Sparks-of-Sharks/",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@pnotify/core": "^5.2.0",
     "axios": "^0.21.1",
+    "gh-pages": "^3.2.3",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-clean-easy": "^1.0.2",
