--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "basiclightbox": "^5.0.4",
+    "canvas-confetti": "^1.4.0",
     "lodash.debounce": "^4.0.8"
   },
   "parcelCleanPaths": [
