--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "basiclightbox": "^5.0.4",
     "canvas-confetti": "^1.4.0",
+    "firebase": "^8.6.8",
     "lodash.debounce": "^4.0.8"
   },
   "parcelCleanPaths": [
