--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "basiclightbox": "^5.0.4",
     "canvas-confetti": "^1.4.0",
     "firebase": "^8.6.8",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "material-icons": "^0.7.4"
   },
   "parcelCleanPaths": [
     "dist",
